refactor: replace List.get(0) with getFirst() (Java 21 SequencedCollection)
Converted 16 occurrences across test and production code:
- 11 test files (analytics, market_data, api modules)
- YahooEcoClient.java (Jsoup Elements extends ArrayList)
- GlobalExceptionHandler.java (getAllErrors() returns List)
- IndicatorQueryDslRepository.java (4 occurrences, List<List<...>> / List<Set<...>>)

Intentionally kept: FredClient.java:77 — JsonNode.get(int), not SequencedCollection.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>